
2012-June-10 Struan Robertson

	* CollisionOperator.cpp/.h: Fixed bug relating to basis set method.

	* ExponentialDown.cpp: Removed exit(1) statement as this prevented error 
	statements from being written.

2012-June-10 Chris Morley

	* src/CollisionOperator.cpp, MesmerQA/pentyl/pentyl_isomerization_test.xml:
	change XML syntax to request grain populations, which are now output
	at the same times for each species. This should be good enough and avoids
	complicating the XSLT display. Data structure in m_GrainProfileAtTimeData
	is unchanged.

	* popDiag.xsl: another try to get grain population diagram right.
	
	* src/System.cpp: use sources other than %MESMER_AUTHOR% for author in
	metadata.

2012-June-10 Struan Robertson

	* SimpleILT.cpp: Fixed bug relating to reading of activation energy.

	* Reaction.h: Minor refactoring.

	* Revised header file include strategy.
	
2012-June-09 Struan Robertson

	* DefinedSumOfStates.cpp: Splines added to calculate reaction flux.
	
2012-June-08 Chris Morley

	* src/plugins/gridsearch.cpp: set all range variable values to their
	lower bound at the start. Allows the value attribute to be freely set
	and single or range runs to chosen by <me:calcMethod> alone.
	
	* src/plugins/MesmerILT.cpp, src/plugins/SimpleILT.cpp: correct bug
	which caused energy conversion during setup of a range variable to 
	be wrong when the value was 0.
	
	* src/CollisionOperator.cpp, src/CollisionOperator.h, src/System.cpp:
	modify writing of grain population XML output so that include T and
	conc are included. 

	* src/System.cpp: modify range variable names in the XML output because
	':' is incompatible with XML.
	 
	* mesmer1.xsl, popDiag.xsl: grain population diagram improved but
	not yet ok when there are multiple conditions.

2012-June-05 Chris Morley

	* src/CollisionOperator.cpp: make grain population output normalised
	  - for a given species at a a given time output sum to 1.0. Do not