@@ -43,8 +43,12 @@
       <p class="poplabel">Grain Populations</p>
     </xsl:if>
 
-    <xsl:apply-templates select="me:grainPopulationList"/>
-    
+    <xsl:if test="not(//me:printGrainProfileAtTime/@format='log')">
+      <xsl:apply-templates select="me:grainPopulationList" mode="normalised"/>
+    </xsl:if>                    
+    <xsl:if test="not(//me:printGrainProfileAtTime/@format='normalised')">
+      <xsl:apply-templates select="me:grainPopulationList" mode="log"/>
+    </xsl:if>                    
   </xsl:template>
 
   <!--=========================================================================-->
@@ -123,6 +127,7 @@
     <xsl:param name="maxy"/>
     <xsl:param name="miny"/>
     <xsl:param name="headertext"/>
+    <xsl:param name="footertext"/>
     <svg:svg width="160" height="200">
 
       <!--legend-->
@@ -149,18 +154,21 @@
             <xsl:value-of select="29 + $pos*18"/>
           </xsl:attribute>
           <xsl:value-of select="."/>
-        </svg:text>
+        </svg:text>       
       </xsl:for-each>
-      
+      <svg:text x="10" y="154" font-family="Verdana" font-size="10">
+        <xsl:value-of select="$footertext"/>
+      </svg:text>
+
       <!--y axis labelling-->
       <svg:g font-family="Verdana" font-size="10">
         <svg:text x="128" y="8">
-          <xsl:value-of select="$maxy"/>
+          <xsl:value-of select="format-number($maxy, '#0.00')"/>
         </svg:text>
         <svg:text x="128" y="160">
-          <xsl:value-of select="$miny"/>
+          <xsl:value-of select="format-number($miny, '#0.00')"/>
         </svg:text>
-        <svg:text x="-138" y="144" transform="rotate(-90)">
+        <svg:text x="-79" y="144" text-anchor="middle" transform="rotate(-90)">
           <xsl:value-of select="$ytext"/>
         </svg:text>
       </svg:g>
@@ -192,6 +200,9 @@
         <xsl:attribute name="y">
           <xsl:value-of select="$ypx + 15"/>
         </xsl:attribute>
+        <xsl:if test="$val=0">
+          <xsl:attribute name="text-anchor">left</xsl:attribute>
+        </xsl:if>
         <xsl:value-of select="$val"/>
       </svg:text>
       <xsl:call-template name="xaxis">
@@ -219,7 +230,7 @@
           <xsl:variable name="curtime" select="."/>
           <xsl:value-of select="concat('M 0 0',' L ')"/>
           <xsl:for-each select="$nodes[@time=$curtime]/me:grain">
-            <xsl:value-of select="concat(' ',./@energy, ' -', .)"/>
+            <xsl:value-of select="concat(' ',./@energy, ' ', -(./@normpop))"/>
           </xsl:for-each>
         </xsl:attribute>
       </svg:path>
@@ -227,10 +238,10 @@
   </xsl:template>
 
   <!--===================================================-->
-  <xsl:template match="me:grainPopulation">
+  <xsl:template match="me:grainPopulation" mode="normalised"> 
     <xsl:variable name="pos" select="position()"/>
     <xsl:variable name="graintimes" select="set:distinct(../me:grainPopulation[@ref=current()/@ref]/@time)"/>
-    <xsl:variable name="ymax" select="math:max(//me:grainPopulation/me:grain)"/>
+    <xsl:variable name="ymax" select="math:max(//me:grainPopulation/me:grain/@normpop)"/>
     <xsl:if test="position()=2"> <!--why 2 and not 1?-->
       <div/> <!--to put each set of conditions on a separate line-->
       <xsl:call-template name="legend">
@@ -239,9 +250,107 @@
         <xsl:with-param name="maxy" select="$ymax"/>
         <xsl:with-param name="miny" select="'0.0'"/>
         <xsl:with-param name="headertext" select="'Time, seconds'"/>
+        <xsl:with-param name="footertext" select="'TS energies'"/>
       </xsl:call-template>
     </xsl:if>
-    
+
+    <xsl:variable name="startval" select="0"/>
+    <xsl:variable name="endval" select="math:max(//me:grainPopulation/me:grain/@energy)"/>
+    <xsl:if test="@time=$graintimes[1]">
+      <!--Frame of graph, drawn only once for each set of times-->
+      <svg:svg version="1.1" width="200px" height="220px">
+        <!--species title on top of graph-->
+        <svg:text x="1" y="14" font-family="Verdana" font-size="13" stroke="teal">
+          <xsl:value-of select="@ref"/>
+        </svg:text>
+        <svg:text x="190" y="14"  text-anchor="end" font-family="Verdana" font-size="13">
+          <xsl:value-of select="concat(../@T, 'K ', ../@conc)"/>
+        </svg:text>
+        
+        <svg:rect x="1" y="21" width="198" height="158" fill="white" stroke="black" stroke-width="1"/>
+        <xsl:variable name="every" select="4000"/>
+        <xsl:call-template name="xaxis">
+          <xsl:with-param name="val" select="$startval"/>
+          <xsl:with-param name="maxval" select="$endval"/>
+          <xsl:with-param name="pxperstep" select="(200 * $every) div ($endval - $startval)"/>
+          <xsl:with-param name="xpx" select="200 div ($endval - $startval)"/>
+          <xsl:with-param name="ypx" select="180"/>
+          <xsl:with-param name="every" select="$every"/>
+        </xsl:call-template>
+        <svg:text text-anchor="middle"  font-family="Verdana" font-size="10">
+          <xsl:attribute name="x">
+            <xsl:value-of select="100"/>
+          </xsl:attribute>
+          <xsl:attribute name="y">
+            <xsl:value-of select="208"/>
+          </xsl:attribute>
+          <xsl:value-of select="concat('grain energy, ', @units)"/>
+        </svg:text>
+
+        <!--Contents of graph-->
+        <!--Viewbox puts -ymax at top and 0 at bottom. Values are negated before plotting.-->
+        <svg:svg y="20" height="160" preserveAspectRatio="none" stroke="teal">
+          <xsl:attribute name="viewBox">
+            <xsl:value-of select="concat($startval, ' ', -$ymax, ' ', $endval - $startval, ' ',$ymax)"/>
+          </xsl:attribute>
+          <!--Draw lines a single species and all times-->
+          <xsl:call-template name="grainPopLines">
+            <xsl:with-param name="nodes" select="../me:grainPopulation[@ref=current()/@ref]"/>
+          </xsl:call-template>
+          
+          <!--Mark the energies of all the transition states-->
+          <xsl:variable name="transitionStates" select="//cml:reaction/me:transitionState/cml:molecule/@ref"/>
+          <!--Energy of the current species-->
+          <xsl:variable name="curref" select="@ref"/>
+          <xsl:variable name="currentE"
+             select="//cml:moleculeList/cml:molecule[@id=$curref]//cml:property[@dictRef='me:ZPE']/cml:scalar"/>
+
+          <xsl:for-each select="$transitionStates">
+            <xsl:variable name="tsE"
+             select="//cml:moleculeList/cml:molecule[@id=current()]//cml:property[@dictRef='me:ZPE']/cml:scalar"/>
+            <xsl:variable name="tsX" select="($tsE - $currentE) * 83.593"/><!--kJ/mol=>cm-1-->
+            <svg:line y1="0" stroke="black">
+              <xsl:attribute name="x1">
+                <xsl:value-of select="$tsX"/>
+              </xsl:attribute> 
+              <xsl:attribute name="x2">
+                <xsl:value-of select="$tsX"/>
+              </xsl:attribute> 
+              <xsl:attribute name="y2">
+                <xsl:value-of select="-0.05 * $ymax"/>
+              </xsl:attribute> 
+              <xsl:attribute name="stroke-width">
+                <xsl:value-of select="0.01 * ($endval - $startval)"/>
+              </xsl:attribute> 
+            </svg:line>
+          </xsl:for-each>
+
+
+        </svg:svg>
+      </svg:svg>
+    </xsl:if>
+  </xsl:template>
+
+  <xsl:template match="me:grainPopulation" mode="log">
+    <!--Grain population log plot-->
+    <xsl:variable name="pos" select="position()"/>
+    <xsl:variable name="graintimes" select="set:distinct(../me:grainPopulation[@ref=current()/@ref]/@time)"/>
+    <xsl:variable name="ymax" select="math:max(//me:grainPopulation/me:grain/@logpop)"/>
+    <xsl:variable name="ymin" select="math:min(//me:grainPopulation/me:grain/@logpop)"/>
+    <xsl:if test="position()=2">
+      <!--why 2 and not 1?-->
+      <div/>
+      <!--to put each set of conditions on a separate line-->
+      <xsl:call-template name="legend">
+        <xsl:with-param name="nodes" select="$graintimes"/>
+        <xsl:with-param name="ytext" select="'log10(grain pop)'"/>
+        <xsl:with-param name="maxy" select="$ymax"/>
+        <xsl:with-param name="miny" select="$ymin"/>
+        <xsl:with-param name="headertext" select="'Time, seconds'"/>
+        <xsl:with-param name="footertext" select="'TS energies'"/>
+      </xsl:call-template>
+    </xsl:if>
+
     <xsl:variable name="startval" select="0"/>
     <xsl:variable name="endval" select="math:max(//me:grainPopulation/me:grain/@energy)"/>
     <xsl:if test="@time=$graintimes[1]">
@@ -275,22 +384,73 @@
         </svg:text>
         
         <!--Contents of graph-->
-        <!--Viewbox puts -ymax at top and 0 at bottom. Values are negated before plotting.-->
+        <!--Viewbox puts -ymax at top and -ymin at bottom. Values are negated before plotting.-->
         <svg:svg y="20" height="160" preserveAspectRatio="none" stroke="teal">
           <xsl:attribute name="viewBox">
-            <xsl:value-of select="concat($startval, ' ', -$ymax, ' ', $endval - $startval, ' ',$ymax)"/>
+            <xsl:value-of select="concat($startval, ' ', -$ymax, ' ', $endval - $startval, ' ',$ymax -  $ymin)"/>
           </xsl:attribute>
           <!--Draw lines a single species and all times-->
-          <xsl:call-template name="grainPopLines">
+          <xsl:call-template name="logGrainPopLines">
             <xsl:with-param name="nodes" select="../me:grainPopulation[@ref=current()/@ref]"/>
           </xsl:call-template>
+          <!--Mark the energies of all the transition states-->
+          <xsl:variable name="transitionStates" select="//cml:reaction/me:transitionState/cml:molecule/@ref"/>
+          <!--Energy of the current species-->
+          <xsl:variable name="curref" select="@ref"/>
+          <xsl:variable name="currentE"
+             select="//cml:moleculeList/cml:molecule[@id=$curref]//cml:property[@dictRef='me:ZPE']/cml:scalar"/>
+
+          <xsl:for-each select="$transitionStates">
+            <xsl:variable name="tsE"
+             select="//cml:moleculeList/cml:molecule[@id=current()]//cml:property[@dictRef='me:ZPE']/cml:scalar"/>
+            <xsl:variable name="tsX" select="($tsE - $currentE) * 83.593"/><!--kJ/mol=>cm-1-->
+            <svg:line y1="0" stroke="black">
+              <xsl:attribute name="x1">
+                <xsl:value-of select="$tsX"/>
+              </xsl:attribute>
+              <xsl:attribute name="x2">
+                <xsl:value-of select="$tsX"/>
+              </xsl:attribute>
+              <xsl:attribute name="y1">
+                <xsl:value-of select="-$ymin"/>
+              </xsl:attribute>
+              <xsl:attribute name="y2">
+                <xsl:value-of select="-$ymin - 0.05 * ($ymax - $ymin)"/>
+              </xsl:attribute>
+              <xsl:attribute name="stroke-width">
+                <xsl:value-of select="0.01 * ($endval - $startval)"/>
+              </xsl:attribute>
+            </svg:line>
+          </xsl:for-each>
+
         </svg:svg>
       </svg:svg>
     </xsl:if>
   </xsl:template>
-  
+    
+  <!--===================================================-->
+  <!--Draw the lines for each time-->
+  <xsl:template name="logGrainPopLines">
+    <xsl:param name="nodes"/>
+    <xsl:for-each select="$nodes/@time">
+      <xsl:variable name="pos" select="position()"/>
+      <svg:path fill="none" stroke-width ="0.15">
+        <xsl:attribute name="stroke">
+          <xsl:value-of select="exsl:node-set($colors)/c[$pos]"/>
+        </xsl:attribute>
+        <xsl:attribute name="d">
+          <xsl:variable name="curtime" select="."/>
+          <xsl:value-of select="concat('M ', $nodes[@time=$curtime]/me:grain[1]/@energy, $nodes[@time=$curtime]/me:grain[1]/@logpop, ' L ')"/>
+          <xsl:for-each select="$nodes[@time=$curtime]/me:grain">
+            <xsl:value-of select="concat(' ',./@energy, ' ', -(./@logpop))"/>
+          </xsl:for-each>
+        </xsl:attribute>
+      </svg:path>
+    </xsl:for-each>
+  </xsl:template>
+
   <!-- Probably because XPath 1.0 doesn't use scientific numbers, some numbers give NaN when  
-       arithmetic is done on them in XSLT before passing on to SVG. Consequently, the minus
-       sign needed to invert the y axis is provided separately and the number is presumably
-       handled as a string.-->
+       arithmetic is done on them in XSLT before passing on to SVG. Consequently, in the
+       species population diagram the minus sign needed to invert the y axis is provided
+       separately and the number is presumably handled as a string.-->
 </xsl:stylesheet>
